--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,36 @@
-body{
-    background-color: red;
+.container {
+  margin-top: 12%;
+  padding-top: 3%;
+  border: 1px solid black;
+  background-color: rgb(240, 159, 240);
+  display: flex;
+  justify-content: center;
+  height: 200px;
+}
+.age {
+  display: flex;
+}
+.value {
+  display: flex;
+  padding: 1px 2px;
+}
+.age-value {
+  font-size: larger;
+  padding-top: 8px;
+  margin-right: 10px;
+}
+.weight-value {
+  font-size: larger;
+  padding-top: 8px;
+  margin-right: 10px;
+}
+#output {
+  background-color: rgb(198, 255, 129);
+  border: 1px solid black;
+}
+#check {
+  border-radius: 10px;
+  background-color: blue;
+  color: white;
+  font-family: sans-serif;
 }
